RESOLVED FIXED136655
REGRESSION (r172129): Vine pages load as blank
https://bugs.webkit.org/show_bug.cgi?id=136655
Summary REGRESSION (r172129): Vine pages load as blank
Jeff Kelley
Reported 2014-09-08 18:52:33 PDT
It appears that the current WebKit nightly build (and several prior builds) can’t render pages on Vine. Screenshot of the included URL (https://vine.co/v/Oz7Vlz6EM1d) attached. I’m on 10.9.4 using WebKit in Safari at Version 7.0.6 (9537.78.2, r173400).
Attachments
A screenshot of the bug. (244.98 KB, image/png)
2014-09-08 18:53 PDT, Jeff Kelley
no flags
the patch (3.45 KB, patch)
2014-09-11 12:34 PDT, Filip Pizlo
msaboff: review+
Jeff Kelley
Comment 1 2014-09-08 18:53:17 PDT
Created attachment 237829 [details] A screenshot of the bug.
Jeff Kelley
Comment 2 2014-09-08 18:55:04 PDT
Oddly, if I open up Page Resources with ⌘⌥A, then refresh the page with that open, it works.
Alexey Proskuryakov
Comment 3 2014-09-09 12:42:14 PDT
Alexey Proskuryakov
Comment 4 2014-09-09 12:42:34 PDT
Filip Pizlo
Comment 5 2014-09-11 12:34:01 PDT
Created attachment 237979 [details] the patch
Michael Saboff
Comment 6 2014-09-11 12:47:09 PDT
Comment on attachment 237979 [details] the patch View in context: https://bugs.webkit.org/attachment.cgi?id=237979&action=review r=me > Source/JavaScriptCore/dfg/DFGPhantomRemovalPhase.cpp:101 > + if (sourceIndex - 1) { I prefer if (sourceIndex > 1) for readability
Filip Pizlo
Comment 7 2014-09-11 12:53:18 PDT
(In reply to comment #6) > (From update of attachment 237979 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=237979&action=review > > r=me > > > Source/JavaScriptCore/dfg/DFGPhantomRemovalPhase.cpp:101 > > + if (sourceIndex - 1) { > > I prefer if (sourceIndex > 1) for readability I agree. Will change.
Filip Pizlo
Comment 8 2014-09-11 13:05:00 PDT
Note You need to log in before you can comment on or make changes to this bug.