REGRESSION (r172129): Vine pages load as blank https://bugs.webkit.org/show_bug.cgi?id=136655 rdar://problem/18281215

Reviewed by Michael Saboff.

If lastNode is something that is subject to DCE, then removing the Phantom's reference to something
that lastNode references means that the thing being referenced may no longer be kept alive for OSR.
Teach PhantomRemovalPhase that it's only safe to do this if lastNode is a Phantom. That's probably too
conservative, but that's fine since this is mainly just an optimization to make the IR sane to read and
reasonably compact; it's OK if we miss cases here.

* dfg/DFGPhantomRemovalPhase.cpp:
(JSC::DFG::PhantomRemovalPhase::run):
* tests/stress/remove-phantom-after-setlocal.js: Added.



Canonical link: https://commits.webkit.org/154575@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@173534 268f45cc-cd09-0410-ab3c-d52691b4dbfc